package shared;
syntax = "proto3";
 
message DataContainer {
  
  UserData user = 1;
  LoginResult loginResult = 2;  
}

message UserData{
  string guid = 1;
  string screenName = 2;
  repeated Account accounts = 3;
  bool initialData = 4;
  bool notifyUserStatus = 5;  
}

message LoginResult {
    bool success = 1;  
    string errorMessage = 2;    
    string sid = 3;      
    string version = 4;    
  }

  message Account{
    string currency = 1;
    float balance = 2;
    string refundAddress = 3;
  }



  

